<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/action_search"
        android:title="@string/action_search"
        app:queryHint="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_delete_all"
        android:icon="@drawable/action_delete"
        android:title="@string/action_delete_all"
        app:showAsAction="ifRoom"
        android:orderInCategory="101"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="102"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>
